API to call DACCAD from outside.