@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # You may need to customize memory config below to optimize for your environment
-JAVA_OPTS='-Xmx4024m -Xms256m -XX:+HeapDumpOnOutOfMemoryError -XX:+AggressiveOpts -XX:+OptimizeStringConcat -XX:+UseFastAccessorMethods -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1 -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -Djava.awt.headless=false -server -Dlog.mode=production'
+JAVA_OPTS='-Xmx4024m -Xms256m -XX:+HeapDumpOnOutOfMemoryError -XX:+AggressiveOpts -XX:+OptimizeStringConcat -XX:+CMSParallelRemarkEnabled -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1 -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -Djava.awt.headless=false -server -Dlog.mode=production'
 
 # Quote because path may contain spaces
 if [ -h $0 ]
@@ -20,7 +20,7 @@ CLASS_PATH="$ROOT_DIR/lib/*:config"
 # http://cr.yp.to/daemontools.html
 if [ -n "$1" ]
 then
-  exec java $JAVA_OPTS -cp $CLASS_PATH $1 $2
+  exec java $JAVA_OPTS -cp $CLASS_PATH $@
 else
   exec java $JAVA_OPTS -cp $CLASS_PATH cluster.Cluster
 fi
